Fix 2FA configuration alignment
Changes string to "No Two-Factor Authentication":

--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -419,6 +419,10 @@ table {
   color: green;
 }
 
+.displayblock {
+  display: block;
+}
+
 img.lightbulb {
   cursor: pointer;
 }
